--- a/crew/styles/main.css
+++ b/crew/styles/main.css
@@ -1,6 +1,12 @@
+.box {
+	border-radius: 2px;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
+}
+
 body {
 	margin: 0;
 	font-family: Arial;
+	background-color: #fcfcfc;
 }
 header {
 	height: 35px;
@@ -53,4 +59,28 @@ nav#sideMenu>ul>li>a:hover {
 }
 main {
 	margin-left: 250px;
+}
+
+nav.list {
+	position: absolute;
+	width: 325px;
+	height: calc(100% - 61.35px);
+	overflow: auto;
+}
+nav.list>ul {
+	margin: 0;
+	padding: 0;
+}
+nav.list>ul>a {
+	text-decoration: none; 
+	color: #000;
+}
+nav.list>ul>a>li {
+	list-style-type: none;
+	display: block;
+	display: block;
+	padding: 10px 10px;
+	margin: 5px 5px 10px 5px;
+	background-color: #fff;
+	transition: box-shadow .25s;
 }
